--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -17,19 +17,19 @@ The migration process has the following key steps:
 
 . xref:Planning_the_migration[Planning the migration]:
 +
-* xref:Planning_questions[Questions to ask before migration], to help you assess the resources and time required for your migration
-* xref:Best_practices_for_migration[Recommendations for migration], to minimize the impact on your users
+* xref:Questions_to_ask_before_migration[Questions to ask before migration], to help you assess the resources and time required for your migration
+* xref:Recommendations_for_migration[Recommendations] to minimize the impact on your users
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
-* xref:Preparing_the_vmware_source_environment[Preparing the source environment], by extending the network and checking the virtual machines
-* xref:Preparing_the_target_environment[Preparing the target environment], including configuring the target storage and networks, installing software, and configuring CloudForms
+* xref:Preparing_the_vmware_source_environment[Preparing the source environment]
+* xref:Preparing_the_target_environment[Preparing the target environment]. Configuring storage and networks, as well as installing and configuring software packages
 * xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts]. Conversion hosts are RHV hosts or OpenStack Platform instances running `virt-v2v` and `virt-v2v-wrapper`, which perform the migration.
 
-// . xref:Migrating_the_infrastructure[Migrating the infrastructure]
-// +
-// * xref:Creating_an_infrastructure_mapping[Creating an infrastructure mapping], to map your source and target infrastructures
-// * xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
+. xref:Migrating_the_infrastructure[Migrating the infrastructure]
++
+* xref:Creating_an_infrastructure_mapping[Creating an infrastructure mapping] for your source and target resources
+* xref:Creating_and_running_a_migration_plan[Creating and running a migration plan]
 +
 For a detailed description of the migration process, see xref:Vmware_to_rhv_workflow[] or xref:Vmware_to_osp_workflow[].
 
