--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -12,7 +12,7 @@ Preparing the environment for migration involves the following key steps:
 
 . xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for transformation]
 +
-// Optionally, you can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for better performance and control of the migration process.
+Optionally, you can xref:Changing_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 include::modules/assembly_Preparing_the_target_environment.adoc[leveloffset=+1]
