--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Configuring_conversion_hosts_for_transformation.adoc
@@ -5,17 +5,25 @@
 
 Configuring a conversion host for VDDK or SSH transformation involves the following key steps:
 
-. VDDK: Downloading the VMware Virtual Disk Development Kit
+. (VDDK only) Downloading the VMware Virtual Disk Development Kit
 . Creating the `extra_vars.yml` and `secure_vars.yml` files
 . Running the `conversion_host_enable` playbook to configure the host
 . Running the `conversion_host_check` playbook to verify the configuration
 . (Red Hat Virtualization only) Authenticating the conversion host in CloudForms
-. SSH: Configuring the SSH connection to the VMware hypervisors
+. (SSH only) Configuring the SSH connection to the VMware hypervisors
 
 Configure the conversion hosts for your environment:
 
 * xref:Configuring_rhv_hosts[]
 * xref:Configuring_osp_hosts[]
+
+[IMPORTANT]
+====
+If you upgrade your target environment, update the conversion hosts:
+
+* xref:Updating_rhv_conversion_hosts[Updating Red Hat Virtualization conversion hosts]
+* xref:Updating_osp_conversion_hosts[Updating OpenStack Platform conversion hosts]
+====
 
 [[Configuring_rhv_hosts]]
 == Configuring Red Hat Virtualization conversion hosts
