--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -5,7 +5,7 @@
 
 Creating and running a migration plan involves the following key steps:
 
-. Checking whether the following xref:Migration_plan_prerequisites_and_options[migration plan prerequisites and options] apply:
+. Checking whether the following xref:Migration_plan_prerequisites_and_options[migration plan options and prerequisites] apply:
 
 * You are migrating previously migrated virtual machines
 * You are migrating virtual machines running RHEL or other Linux operating system
