--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -14,7 +14,7 @@ If you add or remove providers or provider objects from an infrastructure mappin
 
 .Prerequisite
 
-* Red Hat Virtualization only: xref:Enabling_conversion_hosts_in_cloudforms[Authenticate the RHV conversion hosts in CloudForms] to ensure that the network appears in the infrastructure mapping.
+* (Red Hat Virtualization only) xref:Enabling_conversion_hosts_in_cloudforms[Authenticate the RHV conversion hosts in CloudForms] to ensure that the network appears in the infrastructure mapping.
 
 .Procedure
 
@@ -35,7 +35,7 @@ image:Creating_infrastructure_mapping.png[]
 
 |*Map Compute*
 .<a|. Select a *Source Provider \ Datacenter \ Cluster*.
-. Select a target:
+. Select a target environment:
 * Red Hat Virtualization: *Target Provider \ Datacenter \ Cluster*
 * OpenStack Platform: *Target Provider \ Project*.
 +
