--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -16,11 +16,17 @@ IP addresses, VLANs, and other network configurations should not be changed befo
 
 . Prepare the VMware virtual machines:
 
-* Install VMware Tools to capture IP addresses (see link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[] to download and install VMware Tools).
+* Install VMware Tools to capture IP addresses. To download and install VMware Tools, navigate to link:https://www.vmware.com/support/ws5/doc/new_guest_tools_ws.html[].
 * Unmount mounted ISO/CDROM disks.
 * Ensure that attached disks are not encrypted.
 * Ensure that each NIC has no more than one IPv4 and/or one IPv6 address.
-* Ensure that the virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`). *Special characters and spaces are not permitted.*
+* Ensure that the virtual machine names contain only upper- or lower-case letters, numbers, underscores (`_`), hyphens (`-`), or periods (`.`).
++
+[NOTE]
+====
+Special characters and spaces are not permitted.
+====
+
 * Red Hat Virtualization only: Ensure that source virtual machine names do not duplicate the names of existing RHV virtual machines.
 +
 You are ready to prepare the xref:Preparing_the_target_environment[target environment].
