--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -1,6 +1,6 @@
 // Module included in the following assemblies:
-// assembly_Planning.adoc
-[id="Planning_questions"]
+// assembly_Planning_the_migration.adoc
+[id="Questions_to_ask_before_migration"]
 = Questions to ask before migration
 
 Plan sufficient resources for your migration based on your responses to the following questions:
@@ -32,15 +32,14 @@ What am I missing?::
 What impact will the migration have on my users?::
 * Assess the effect the migration may have on a production environment.
 +
-[NOTE]
-====
 It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
-====
 
 * Check whether users will lose access to critical applications.
 
 How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following example is provided as a guide.
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
++
+The following example is provided as a guide:
 +
 .Red Hat Virtualization migration
 ====
