--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_options.adoc
@@ -1,12 +1,17 @@
 // Module included in the following assemblies:
 // assembly_Creating_and_running_a_migration_plan.adoc
 [id="Migration_plan_prerequisites_and_options"]
-= Migration plan prerequisites and options
+= Migration plan options and prerequisites
 
-Check whether the following prerequisites and options apply to your migration:
+Check whether the following options and prerequisites apply to your migration:
 
 You are migrating previously migrated virtual machines::
 See xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[]
++
+[NOTE]
+====
+For large migrations, a CSV file is optional, but recommended.
+====
 
 You are migrating virtual machines running RHEL or other Linux operating system::
 See xref:Creating_a_rhel_premigration_playbook[]
