--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -5,7 +5,7 @@
 
 You can change the maximum number of concurrent migrations for conversion hosts or providers to control the impact of the migration process on your infrastructure.
 
-[IMPORTANT]
+[WARNING]
 ====
 For VDDK, the maximum concurrent migrations per conversion host should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
 ====
@@ -16,10 +16,8 @@ An increase in the maximum number of concurrent migrations affects all migration
 
 A decrease maximum number of concurrent migrations affects only future migration plans. Migration plans that are in progress will use the limit that was set when the plan was created.
 
-To change the maximum number of concurrent migrations:
+Changing the maximum number of concurrent migrations for all conversion hosts::
 
-* For all conversion hosts:
-+
 In CloudForms, click menu:Compute[Migration > Migration Settings] and select the new limit.
 
 [NOTE]
@@ -27,7 +25,7 @@ In CloudForms, click menu:Compute[Migration > Migration Settings] and select the
 The following commands are performed on the command line of the CloudForms machine.
 ====
 
-* For a specific conversion host (`20` in this example):
+Changing the maximum number of concurrent migrations for a specific conversion host (`20` in this example)::
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -37,7 +35,7 @@ irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeW
 irb(main):002:0> $evm.vmdb(:host).find_by(:name => "_host1.example.com_").custom_set("Max Transformation Runners", _20_)
 ----
 
-* For a provider (`30` in this example):
+Changing the maximum number of concurrent migrations for a provider (`30` in this example)::
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -47,8 +45,8 @@ irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeW
 irb(main):002:0> $evm.vmdb(:ext_management_system).find_by(:name => "_RHV_").custom_set("Max Transformation Runners", _30_)
 ----
 
-To get the maximum number of concurrent migrations for a provider:
-
+Getting the maximum number of concurrent migrations for a provider::
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # vmdb
