--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_ssh_connection_to_vmware_hypervisors.adoc
@@ -3,7 +3,9 @@
 [id="Configuring_ssh_connection_for_{context}"]
 .Configuring the SSH connection to the VMware hypervisors
 
-. Enable SSH access on all VMware hypervisors. For instructions, navigate to link:https://docs.vmware.com/en/VMware-vSphere/index.html[]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
+. Enable SSH access on all VMware hypervisors.
++
+For instructions, navigate to link:https://docs.vmware.com/en/VMware-vSphere/index.html[]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
 
 . Copy the public SSH key corresponding to the private SSH key in the `secure_vars.yml` file to each VMware hypervisor:
 ifdef::rhv[]
