--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
@@ -13,6 +13,8 @@ If you are migrating a large number of virtual machines, using a CSV file to add
 For large OpenStack Platform migrations, you can use a CSV file to set the security groups and flavors, instead of setting them manually for each virtual machine in CloudForms.
 ====
 
+The CSV file may contain the following fields:
+
 .CSV file fields
 [cols="1,3", options="header"]
 |===
@@ -23,6 +25,8 @@ For large OpenStack Platform migrations, you can use a CSV file to set the secur
 |`Security Group` |Optional, for OpenStack Platform only. The default is `Default`.
 |`Flavor` |Optional, for OpenStack Platform only. If you do not create flavors for the migration or if you leave this field blank, CloudForms tries to map the source virtual machines with existing flavors.
 |===
+
+Create a CSV file according to the following example:
 
 .CSV file example
 [options="nowrap" subs="+quotes,verbatim"]
