--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -3,13 +3,15 @@
 [id="Creating_a_rhel_premigration_playbook"]
 = Creating a `RHEL premigration` playbook for RHEL/Linux source virtual machines
 
-If you are migrating virtual machines running RHEL or other Linux operating system, a `RHEL premigration` playbook ensures that their IP addresses are accessible after migration. The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation).
+If you are migrating virtual machines running RHEL or other Linux operating system, you should create a `RHEL premigration` playbook to ensure that their IP addresses are accessible after migration.
+
+The `RHEL premigration` playbook calls the Ansible `ims.rhel_premigration` role (see link:https://galaxy.ansible.com/fdupont_redhat/ims_rhel_pre_migration[] for documentation).
 
 The `ims.rhel_premigration` role performs the following tasks on the source virtual machines:
 
 * Preserves the static IP address configuration by creating udev rules to associate the virtual machine's MAC address with its interface name
 
-* Red Hat Virtualization only: Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment
+* (Red Hat Virtualization only) Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment
 
 [NOTE]
 ====
