--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Known_issues.adoc
@@ -3,19 +3,28 @@
 [id="Known_issues"]
 = Known Issues
 
-To obtain critical updates for the conversion hosts:
+[NOTE]
+====
+To ensure that you have the latest software and critical updates:
 
 * Red Hat Virtualization:
++
+. Log in to the Manager machine using SSH.
+. Update the packages and re-deploy `virt-v2v-wrapper`:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # yum update
-# cp /usr/share/ansible/roles/oVirt.v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
+# cp /usr/share/ansible/roles/oVirt.ovirt-ansible-v2v-conversion-host/files/virt-v2v-wrapper.py /usr/bin/
 ----
 
-* OpenStack Platform: Contact Red Hat Support (link:https://access.redhat.com/support/cases/#/case/new[]) for a newer version of the conversion appliance.
+* OpenStack Platform:
 
-.Issues to be addressed in a future release
+. Download the latest conversion host appliance.
+. Redeploy the conversion hosts (see xref:Deploying_osp_conversion_hosts[Deploying the OpenStack Platform conversion hosts]).
+====
+
+The following issues will be addressed in a future release:
 
 * Canceling a migration does not stop the creation of volumes, instances, and network ports (OpenStack Platform), or virtual machines (Red Hat Virtualization). link:https://bugzilla.redhat.com/show_bug.cgi?id=1666799[]
 
