--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
@@ -1,6 +1,6 @@
 // Module included in the following assemblies:
 // assembly_Preparing_the_target_environment.adoc
-* Compatible software versions:
+* Compatible software versions
 +
 .Software compatibility matrix
 [cols="2,1,1", options="header"]
