--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -13,7 +13,7 @@ include::common/attributes/ims.adoc[]
 
 :numbered:
 include::doc/assembly_IMS_overview.adoc[leveloffset=+1]
-include::doc/assembly_Planning.adoc[leveloffset=+1]
+include::doc/assembly_Planning_the_migration.adoc[leveloffset=+1]
 include::doc/assembly_Preparation.adoc[leveloffset=+1]
 include::doc/assembly_Migrating_the_infrastructure.adoc[leveloffset=+1]
 include::doc/assembly_Troubleshooting.adoc[leveloffset=+1]
