--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -23,7 +23,10 @@ image:Create_Migration_Plan_screen.png[]
 |*General*
 .<a|. Select an *Infrastructure mapping*.
 +
+[NOTE]
+====
 If you select an OpenStack Platform mapping, an *Instance Properties* screen appears after the *VMs* screen.
+====
 
 . Enter the migration plan *Name* and (optional) *Description*.
 . Select a virtual machine discovery method:
@@ -49,14 +52,14 @@ If you cannot discover or import the source virtual machines, see xref:Migration
 (OpenStack Platform only)
 .<a|. Click the pencil icon to edit the network or flavor of each selected virtual machine.
 +
-Flavors that are too small for the virtual machine are marked with an asterisk (`*`). If you have not created flavors for the migration, CloudForms tries to map the virtual machines to available flavors.
+Flavors that are too small for the virtual machine are marked with an asterisk{nbsp}(`*`). If you have not created flavors for the migration, CloudForms tries to map the virtual machines to available flavors.
 +
 If you have added the virtual machines with a CSV file, the networks and flavors are already set.
 . Click *Next*.
 
 .<a|*Advanced Options*
 .<a|[id="Advanced_options_screen"]
-. Select a premigration and/or postmigration playbook service from the dropdown lists (see xref:Adding_ansible_playbooks_to_cloudforms[] for details)
+. Select a premigration and/or postmigration playbook service from the dropdown lists (see xref:Adding_ansible_playbooks_to_cloudforms[]).
 . Select the virtual machines on which to run the playbook services.
 . Click *Next*.
 
@@ -69,7 +72,9 @@ The migration plan is saved in *Migration Plans Not Started* and will not run un
 
 * *Start migration immediately*
 +
-The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time. See xref:Viewing_migration_plan_progress[] for details. Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress].
+The migration plan may take some time to complete. Progress bars indicate the amount of transferred data, the number of migrated virtual machines, and the elapsed time. See xref:Viewing_migration_plan_progress[] for details.
++
+Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan in progress] or xref:Retrying_a_migration_plan[retry a migration plan] that was interrupted by external factors.
 
 . Click *Create*.
 
@@ -106,7 +111,7 @@ The counter in menu:Compute[Migration > Migration Plans] may be a few seconds ah
 . Select a migration plan and click *Cancel Migration*.
 . Click *Cancel Migrations* to confirm the cancellation. The canceled migration appears in *Migration Plans Complete* with a red `x` indicating that the plan did not complete successfully.
 
-[[Retrying_a_failed_migration_plan]]
+[[Retrying_a_migration_plan]]
 == Retrying a migration plan
 
 . Delete newly created target virtual machines or instances, if any, to avoid name conflicts with the migrating VMware virtual machines.
