--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_rhel_premigration_playbook.adoc
@@ -13,12 +13,14 @@ The `ims.rhel_premigration` role performs the following tasks on the source virt
 
 * (Red Hat Virtualization only) Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment
 
-[NOTE]
+[IMPORTANT]
 ====
 The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or the `rhel-7-server-rpms` repository is enabled in the source virtual machine when it installs `qemu-guest-agent`. If you have disabled the repository, re-enable it in the RHEL premigration playbook.
 ====
 
-.`RHEL premigration` playbook example
+Create a `RHEL premigration` playbook according to the following example:
+
+.`RHEL_premigration.yml` example
 [source,yml]
 ----
 ---
@@ -27,4 +29,4 @@ The `ims.rhel_premigration` role assumes that either the `rhel-6-server-rpms` or
     - role: ims.rhel_pre_migration
 ----
 
-You will select this playbook as a premigration playbook service in the xref:Advanced_options_screen[Advanced options screen] when you (xref:Creating_a_migration_plan[create the migration plan]).
+You will select this playbook as a premigration playbook service in the xref:Advanced_options_screen[Advanced options screen] when you xref:Creating_a_migration_plan[create the migration plan].
