--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_logs.adoc
@@ -3,28 +3,33 @@
 [id="Migration_logs"]
 = Migration logs
 
-You can check the conversion host migration logs, playbook logs (if relevant), and the CloudForms log for errors.
+You can check the conversion host migration logs and the CloudForms log for errors.
 
-.Conversion host and playbook logs
+.Conversion host migration logs
 
-. In CloudForms, click menu:Compute[Migration Plans > Migration Plans Complete].
-. Click a migration plan name to view its details.
-. Click *Download Log* of a virtual machine and select a log from the dropdown list:
+When disk migration starts, two logs are created in the conversion host:
 
-* *Premigration log:* This option only appears if a premigration playbook is used.
-* *Migration log:* Debug log of `virt-v2v`. This log tracks the core of the virtual machine process, including `libguestfs` traces and disk migration details.
-* *Virt-v2v-wrapper log:* Log of `virt-v2v-wrapper`, the daemonizing wrapper for `virt-v2v`. This log traces the orchestration of the virtual machine conversion on the conversion host, including disk migration percentages and `virt-v2v` error reporting.
-* *Postmigration log:* This option only appears if a postmigration playbook is used.
+* `virt-v2v-wrapper`: Log of the daemonizing wrapper for `virt-v2v`. This log traces the orchestration of the virtual machine conversion on the conversion host, including disk migration percentages and `virt-v2v` error reporting.
+* `virt-v2v`: Debug output from `virt-v2v` itself. This log tracks the core of the virtual machine process, including `libguestfs` traces and disk migration details.
+
+To access the conversion host migration logs:
+
+. Log in to the RHV Manager or an OpenStack Platform conversion host using SSH.
+. Go to `/var/log/vdsm/import/`.
++
+The `virt-v2v` logs are +v2v-import-_date_-_number_.log+ and the `virt-v2v-wrapper` logs are +v2v-import-_date_-_number_-wrapper.log+.
 +
 [IMPORTANT]
 ====
-Both conversion host logs, `virt-v2v` and `virt-v2v-wrapper`, are required for bug analysis if you open a Red Hat Support call at link:https://access.redhat.com/support/cases/#/case/new[].
+Both logs, `virt-v2v` and `virt-v2v-wrapper`, are required for bug analysis if you open a Red Hat Support call at link:https://access.redhat.com/support/cases/#/case/new[].
 ====
 
 [id="CloudForms_log"]
 .CloudForms log
 
 This log traces the orchestration of the virtual machine migration in CloudForms.
+
+To view the CloudForms log:
 
 . Log into the CloudForms machine using SSH.
 . Copy and save the `/var/www/miq/vmdb/log/automation.log` file.
