--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_IMS_overview.adoc
@@ -22,13 +22,13 @@ The infrastructure migration has the following key steps:
 
 . xref:Planning_the_migration[Planning the migration]
 +
-* xref:Questions_to_ask_before_migration[Questions designed to assess the resources and time required for your migration]
-* xref:Recommendations_for_migration[Recommendations to minimize the impact on your users]
+* xref:Questions_to_ask_before_migration[Questions to ask before migration], to help you assess the resources and time required for your migration
+* xref:Recommendations_for_migration[Recommendations] to minimize the impact on your users
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
-* xref:Preparing_the_vmware_source_environment[Preparing the source network and checking the virtual machines for anything that could hinder the migration process]
-* xref:Preparing_the_target_environment[Configuring the target storage and networks, installing software, and adding the providers to CloudForms]
+* xref:Preparing_the_vmware_source_environment[Preparing the source environment]
+* xref:Preparing_the_target_environment[Configuring the target environment]. Configuring storage and networks, as well as installing and configuring software packages
 * xref:Configuring_the_conversion_hosts[Configuring the conversion hosts in CloudForms]. Conversion hosts are RHV hosts or OpenStack Platform instances, running `virt-v2v` and `virt-v2v-wrapper`, which perform the migration.
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure in CloudForms]
