--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -19,7 +19,9 @@ If you exceed the capabilities of your environment, the migrations will fail. Th
 
 What operating systems can I migrate?::
 * For a list of supported guest operating systems, see link:https://access.redhat.com/articles/1351473[].
-* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[]. Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
+* For a list of certified guest operating systems, see link:https://access.redhat.com/articles/973163[].
++
+Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
 
 What resources does my target environment require?::
 * Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines. The source virtual machines are not affected by the migration process.
@@ -30,14 +32,14 @@ What am I missing?::
 What impact will the migration have on my users?::
 * Assess the effects the migration may have on a production environment.
 +
-[NOTE]
-====
 It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
-====
+
 * Check whether users will lose access to critical applications.
 
 How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following example is provided as a guide.
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
++
+The following example is provided as a guide.
 +
 [id="Migration_example"]
 .Red Hat Virtualization migration
