--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -9,7 +9,7 @@ This diagram describes the workflow of a migration to Red Hat Virtualization.
 
 image::vmware_to_rhv_migration_workflow.png[]
 
-image:circle_step_numbers/1.png[25,25] You run a xref:Creating_and_running_a_migration_plan[migration plan] in CloudForms.
+image:circle_step_numbers/1.png[25,25] You run a migration plan in CloudForms.
 
 image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the source virtual machines.
 
