--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Configuring_conversion_hosts_for_transformation.adoc
@@ -19,7 +19,7 @@ Configure the conversion hosts for your environment:
 
 [IMPORTANT]
 ====
-If you upgrade your target environment, update the conversion hosts:
+If you upgrade your target environment, you should update the conversion hosts to ensure that you have the latest software and patches:
 
 * xref:Updating_rhv_conversion_hosts[Updating Red Hat Virtualization conversion hosts]
 * xref:Updating_osp_conversion_hosts[Updating OpenStack Platform conversion hosts]
