--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -5,9 +5,9 @@
 
 You can change the maximum number of concurrent migrations for conversion hosts or providers to control the impact of the migration process on your infrastructure.
 
-[IMPORTANT]
+[WARNING]
 ====
-For VDDK, the value of *Maximum concurrent migrations per conversion host* should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
+For VDDK, the maximum concurrent migrations per conversion host should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
 ====
 
 The provider setting has priority over the conversion host setting. For example, if the maximum number of concurrent migrations for a provider is `20` and for five conversion hosts, `3`, the maximum number of concurrent migrations is `20`, not `15` (`5` conversion hosts `x` `3` concurrent migrations).
@@ -16,15 +16,21 @@ An increase in the maximum number of concurrent migrations affects all migration
 
 A decrease maximum number of concurrent migrations affects only future migration plans. Migration plans that are in progress will use the limit that was set when the plan was created.
 
-.Procedure
-
-* To change the maximum number of concurrent migrations for all conversion hosts or providers:
+To change the maximum number of concurrent migrations for all conversion hosts or providers::
 +
-. Click menu:Compute[Migration > Migration Settings] in CloudForms and select a value for *Maximum concurrent migrations per conversion host* or *Maximum concurrent migrations per provider*. (The value of *Maximum concurrent migrations per conversion host* is constrained so that it cannot be greater than *Maximum concurrent migrations per provider*.)
+. In CLoudForms, click menu:Compute[Migration > Migration Settings].
+Select a value for *Maximum concurrent migrations per conversion host* or *Maximum concurrent migrations per provider*.
++
+[NOTE]
+====
+For VDDK, do not set the maximum number of concurrent migrations per conversion host higher than `20`.
+
+The value of *Maximum concurrent migrations per conversion host* is constrained so that it cannot be greater than *Maximum concurrent migrations per provider*.
+====
 
 . Click *Apply*.
 
-* To change the maximum number of concurrent migrations for a specific conversion host:
+To change the maximum number of concurrent migrations for a specific conversion host::
 +
 . Log in to the CloudForms machine using SSH.
 . Change the limit of `conversion host x` to `y`:
