--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
@@ -10,3 +10,5 @@
 
 [id="Virtual_machines_cannot_be_added_with_CSV_file"]
 * If the virtual machines cannot be added to the migration plan with a CSV file, check the   xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file format and fields]. Create a new migration plan with the updated CSV file.
+
+* If you have not configured conversion hosts, the following error appears after running the migration plan: `Unable to migrate VMs because no conversion host was configured at the time of the attempted migration. See the product documentation for information on configuring conversion hosts.` You can create and save a migration plan whose infrastructure mapping does not contain conversion hosts, but you cannot run the migration plan without conversion hosts.
