--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -43,12 +43,11 @@ The following example is provided as a guide:
 +
 .Red Hat Virtualization migration
 ====
-* Duration of migration: 1:15:53 (hh:mm:ss)
+* Duration of migration: 1:15:53 (_hh:mm:ss_)
 * 10 virtual machines (100 GB RAM, 1000 GB storage)
 * Total data migrated, using VDDK: 1000 GB
 * Hardware:
-
-** (Strong host (40 cores, 500 GB RAM)
+** Strong host (40 cores, 500 GB RAM)
 ** Fast SSD XtremIO storage
 ** Fibre Channel 8 interface for host-to-storage connection
 ** 10 GbE network interface cards for all other connections
