changed note to warning

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -173,7 +173,7 @@ ifdef::osp[]
 ----
 endif::osp[]
 +
-[IMPORTANT]
+[WARNING]
 ====
 Running the `conversion_host_enable` playbook more than once on the same host creates multiple entries in the CloudForms database for that host.
 
