--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -1,17 +1,17 @@
 [id='Troubleshooting']
 = Troubleshooting
 
-To troubleshoot migration errors, see the following:
+To troubleshoot migration errors, see the following resources:
 
-* xref:Migration_logs[]
+* xref:Migration_logs[Migration logs]
+* xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
+* xref:Migration_plan_errors[Migration plan errors]
+* xref:VMware_environment_errors[VMware errors]
+* xref:RHV_VM_migration_failure[Red Hat Virtualization errors]
+* xref:OSP_VM_migration_failure[OpenStack Platform errors]
+* xref:IP_address_errors[Postmigration IP address errors]
 
-* xref:Common_issues_and_mistakes[]:
-
-** xref:Infrastructure_mapping_errors[]
-** xref:Migration_plan_errors[]
-** xref:Virtual_machine_migration_errors[] describes configuration errors in the source/target environments and postmigration IP address errors
-
-* xref:Known_issues[] provides information about critical updates and issues that will be addressed in a future release.
+xref:Known_issues[] provides information about critical updates and issues that will be addressed in a future release.
 
 include::modules/ref_Migration_logs.adoc[leveloffset=+1]
 include::modules/assembly_Common_issues_and_mistakes.adoc[leveloffset=+1]
