--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -7,7 +7,7 @@ You can change the maximum number of concurrent migrations for conversion hosts 
 
 [WARNING]
 ====
-For VDDK, the maximum concurrent migrations per conversion host should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
+For VDDK, the number of maximum concurrent migrations per conversion host should not be greater than `20`. Otherwise, network overload will cause the migration to fail.
 ====
 
 The provider setting has priority over the conversion host setting. For example, if the maximum number of concurrent migrations for a provider is `20` and for five conversion hosts, `3`, the maximum number of concurrent migrations is `20`, not `15` (`5` conversion hosts `x` `3` concurrent migrations).
