--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Troubleshooting.adoc
@@ -7,7 +7,8 @@ To troubleshoot migration errors, see the following resources:
 * xref:Infrastructure_mapping_errors[Infrastructure mapping errors]
 * xref:Migration_plan_errors[Migration plan errors]
 * xref:VMware_environment_errors[VMware errors]
-* xref:Target_environment_errors[Red Hat Virtualization and OpenStack Platform errors]
+* xref:RHV_VM_migration_failure[Red Hat Virtualization errors]
+* xref:OSP_VM_migration_failure[OpenStack Platform errors]
 * xref:IP_address_errors[Postmigration IP address errors]
 
 xref:Known_issues[] provides information about issues that will be addressed in a future release.
